# swedish_wildlife_cam

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  AWS_GPU_DEPLOYMENT_GUIDE.md  AWS_SETUP_GUIDE.md  CAMERA_TIMESTAMP_FIX_GUIDE.md  CLOUD_OPTIONAL_GUIDE.md  CODE_REVIEW.md  Dockerfile.scheduler  GPS_SQLITE_GUIDE.md  LICENSE  LOCATION_TOOLS_GUIDE.md  Makefile  README.md  ROADMAP.md  SECURITY_REVIEW.md  SWEDISH_WILDLIFE_DETECTOR_GUIDE.md  VIDEO_PROCESSING_GUIDE.md  WILDLIFE_CLASSIFICATION_GUIDE.md  coverage.xml  docker-compose.local.yml  docker-compose.yml  odin.local.yaml  pyproject.toml  pytest.ini  requirements.txt  test_weather_integration.py  test_weather_simple.py  timestamp_fix_report_20250928_223513.json  timestamp_fix_report_20250928_224225.json
.github/: dependabot.yml
.github/workflows/: pr.yml  release.yml
aws/: batch-job-definition.json  cloudformation-template-optimized.yaml  cloudformation-template.yaml  compute-environment-spot.json  compute-environment.json
conf/: budget.schema.json  input.schema.json  logging.yaml  species.yaml  time_corrections.csv  time_offsets.yaml
conf/aws/: batch-job-definition-tensorrt.json  batch-queue.json  cloudformation-template-cost-optimized.yaml  real-wildlife-batch-template.yaml  simple-batch-template.yaml
conf/docker/: Dockerfile.aws-tensorrt  Dockerfile.wildlife  docker-compose.local.yml  docker-compose.yml
conf/infrastructure/: timestamp_fix_report_20250928_224209.json
conf/profiles/: odin.yaml
config/: weather_config.yaml
data_contract/: MIGRATIONS.md
docker/: Dockerfile.aws-gpu
docker/local/: Dockerfile.wildlife
docker/munin-detector/: Dockerfile
docs/: CLOUD_OPTIMIZATION.md  COST_OPTIMIZATION.md  DIAGRAM_OVERVIEW.md  INFRASTRUCTURE.md  LOCAL_SETUP.md  OFFLINE_CAMERA_BATCH.md  PLANTUML_DIAGRAMS.md  ROADMAP.md  STEP_FUNCTIONS_ARCHITECTURE.md  UTILITIES.md  WEATHER_INTEGRATION.md  WORKFLOW_DIAGRAM.md
docs/diagrams/: README.md  component_architecture.puml  data_condensation.puml  data_flow.puml  deployment_pipeline.puml  generate_diagrams.sh  generate_single.sh  gps_clustering.puml  hugin_workflow.puml  infrastructure_architecture.puml  munin_workflow.puml  performance_monitoring.puml  system_integration.puml  system_workflow.puml  user_labeling.puml
hugin/examples/: cluster_config.yaml  cluster_tagging_example.yaml  cluster_tagging_workflow.md  cluster_workflow_example.md  efficient_cluster_guide.md  hugin_gps_cluster_config.yaml  hugin_gps_cluster_guide.md  hugin_gps_workflow_example.yaml  pandas_example.py  post_s2_config.yaml  post_s2_workflow_guide.md  quick_pandas_example.py  s2_results_example.json  sample_observations.yaml  simple_pandas_example.py
infra/batch/: compute_environment.json  job_definition.json
infra/cloudformation/: template.yaml
infra/scripts/: deploy_aws.sh  deploy_localstack.sh
infra/stepfn/: state_machine.asl.json
lambdas/batch_fallback/: handler.py
lambdas/guard_budget/: handler.py
lambdas/guard_inputs/: handler.py
lambdas/stage0_exif/: handler.py
lambdas/stage2_post/: handler.py
lambdas/weather_enrichment/: handler.py
lambdas/write_parquet/: handler.py
munin/: README.md  pyproject.toml
profiles/: cloud.yaml  local.yaml
schemas/: README.md
scripts/: batch_dashboard.py  build_lambda_packages.py  check_schema_changes.py  cleanup_s3.py  cost_monitor.py  create_real_job_definition.py  deploy_simple_batch.py  enrich_observations_weather.py  enrich_weather.py  fix_camera_timestamps.py  manage_infrastructure.sh  odin.py  odin_build.py  odin_build.sh  real_aws_test.py  run_odin_tests.sh  run_offline_camera_batch.sh  run_tests.sh  start-local-services.sh  start-localstack-manual.sh  start-services-alternative.sh  start-without-docker.sh  test_aws_pipeline.py  test_aws_setup.py  test_classification_improvement.py  test_cloud_architecture.py  test_cost_optimization.sh  test_fox_badger_detection.py  test_gps_sqlite.py  test_location_tools.py  test_megadetector.py  test_odin_pipeline.py  test_video_processing.py  upload_test_data_aws.py
scripts/archive/: batch_dashboard.py  real_batch_processing_test.py  real_output_batch.py  real_wildlife_batch.py  run_cost_optimized_pipeline.sh  run_real_wildlife_test.py  simple_s3_test.py  simple_test.py  simple_wildlife_test.py  test_trailcam_processing.py
scripts/cli/: odin
scripts/data_upload/: README.md
scripts/demo/: demo_run.sh
scripts/image_tools/: README.md  fix_camera_timestamps.py  fix_timestamps_enhanced.py  fix_video_timestamps.py  test_timestamp_fix.py
scripts/infrastructure/: README.md  batch_workflow_manager.py  cost_optimization_manager.py  cost_optimized_pipeline.py  create_aws_test_user.py  deploy_aws_infrastructure.py  deploy_cost_optimized_infrastructure.py  stage3_output_downloader.py  test_aws_pipeline.py  test_aws_setup.py
scripts/quality/: pep_score.py
scripts/test/: README.md
scripts/testing/: test_local_odin.sh
scripts/train/: README.md  train_wildlife_model.py
src/: README.md
src/common/: __init__.py  exceptions.py  http_client.py
src/cost_optimization/: __init__.py  cli.py  config.py
src/hugin/: README.md  __init__.py  analytics_engine.py  cli.py  cluster_cli.py  cluster_cli_fast.py  cluster_service.py  data_converter.py  data_models.py  efficient_cluster_lookup.py  fast_reporting.py  gps_clustering.py  model_optimization.py  observation_compressor.py  post_s2_workflow.py  pyproject.toml  stage3_reporting.py
src/hugin/adapters/: yolo_cls.py
src/hugin/examples/: cluster_workflow_example.md  efficient_cluster_example.py  pandas_example.py  quick_pandas_example.py  sample_observations.yaml  simple_pandas_example.py
src/munin/: __init__.py  cli.py  data_ingestion.py  database_adapter.py  detection_filter.py  exif_extractor.py  (+13 more)
test/: pytest.ini
tests/: conftest.py  test_adapters_yolo_cls.py  test_cloud_cli.py  test_cloud_models.py  test_cloud_queue.py  test_cloud_storage.py  test_logging.py  test_odin.py  test_odin_simple.py  test_odin_teardown_build.py  test_parquet_to_sqlite.py  test_pipeline_units.py  test_stage3_reporting.py  test_stages.py
(+172 files in other folders)
